DEV: added auto generate UUID id and some test endpoints for develop and debug purpose